update for endpoints(fix)
