# src/routes/admin.route.js
@@ -4,17 +4,17 @@ const router = express.Router()
 const AdminController = require('../controllers/admin.controller')
 const JWTAdminMiddleware = require('../middlewares/JWTAdminMiddleware')
 
-router.get('/', JWTAdminMiddleware, AdminController.getAdminInfo)
+router.get('/me', JWTAdminMiddleware, AdminController.getAdminInfo) // / -> /me
 router.post('/register', JWTAdminMiddleware, AdminController.createAdmin)
 router.post('/login', AdminController.getAdminJWT)
-router.get('/list', JWTAdminMiddleware, AdminController.getAdminList)
-router.get('/location', JWTAdminMiddleware, AdminController.getMyLocations)
+router.get('/', JWTAdminMiddleware, AdminController.getAdminList) // /list -> /
+router.get('/locations', JWTAdminMiddleware, AdminController.getMyLocations)//s
 router.get('/:adminId', JWTAdminMiddleware, AdminController.getAdminInfoById)
 router.patch('/:adminId', JWTAdminMiddleware, AdminController.updateAdmin)
 router.delete('/:adminId', JWTAdminMiddleware, AdminController.deleteAdmin)
 
-router.get('/:adminId/location', JWTAdminMiddleware, AdminController.getAdminLocations)
-router.post('/:adminId/location/:locationId', JWTAdminMiddleware, AdminController.connectLocationWithAdmin)
-router.delete('/:adminId/location/:locationId', JWTAdminMiddleware, AdminController.deleteAdminLocation)
+router.get('/:adminId/locations', JWTAdminMiddleware, AdminController.getAdminLocations) //s
+router.post('/:adminId/locations/:locationId', JWTAdminMiddleware, AdminController.connectLocationWithAdmin)//s
+router.delete('/:adminId/locations/:locationId', JWTAdminMiddleware, AdminController.deleteAdminLocation)//s
 
 module.exports = router
